~ Slide overflow-x fix ~ Part warning fix

--- a/src/ladb_opencutlist/less/global/base.less
+++ b/src/ladb_opencutlist/less/global/base.less
@@ -4,6 +4,7 @@
 
 body {
   padding-left: 90px;
+  overflow-x: hidden;
 }
 
 blockquote {
